# cloud

./: .gitignore  Cargo.toml  README.md  compose.yml
backend/: Cargo.toml
backend/src/: main.rs  state.rs
backend/src/routes/: files.rs  folder.rs  mod.rs  upload.rs
common/src/: lib.rs
frontend/: Cargo.toml
frontend/assets/: main.css  tailwind.css
frontend/src/: main.rs
migrations/: 20250423145833_initial.sql
